Added preprocessor to cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ add_subdirectory(vem/node)
 add_subdirectory(vem/proxy)
 add_subdirectory(ve/cpu)
 add_subdirectory(filter/pprint)
+add_subdirectory(filter/preprocessor)
 add_subdirectory(filter/fuseprinter)
 add_subdirectory(filter/pricer)
 add_subdirectory(filter/complete_reduction)
